hphp/hack/test/typecheck/shape/shape_idx_optional_field_return.php.exp
File "shape_idx_optional_field_return.php", line 5, characters 10-29:
Invalid return type (Typing[4110])
File "shape_idx_optional_field_return.php", line 4, characters 66-68:
This is an int
File "hhi_lib__srcs/Shapes.hhi", line 33, characters 26-28:
It is incompatible with a nullable type
